feat: added attendance marking functionality
